--- a/src/meson.build
+++ b/src/meson.build
@@ -1,7 +1,6 @@
 sources += files('main.cpp')
 sources += files('grid.cpp')
-sources += files('tile.cpp')
-sources += files('mapdisplay.cpp')
+sources += files('matrixdisplay.cpp')
 sources += files('states.cpp')
 sources += files('colourscales.cpp')
 
